// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table sessions {
    session_id uuid [primary key]
    user_id uuid [not null, ref: > users.user_id]
    provider varchar [not null]
    session_status int [not null]
    expires_at timestamp [not null]
    created_at timestamp [not null, default: `now()`]
    last_activity_at timestamp [not null, default: `now()`]
}

Table users {
    user_id uuid [primary key]
    display_id varchar
    display_name varchar
    picture varchar
    created_at timestamp [not null, default: `now()`]

    indexes {
        display_id [unique, name: "users_display_id_index"]
    }
}

Table user_auths {
    user_auth_id uuid [primary key]
    user_id uuid [not null, ref: > users.user_id]
    provider varchar [not null]
    subject varchar [not null]
    is_verified boolean [not null]
    created_at timestamp [not null, default: `now()`]
}

Table talk_sessions {
    talk_session_id uuid [primary key]
    owner_id uuid [not null, ref: > users.user_id]

    theme varchar [not null]

    finished_at timestamp
    created_at timestamp [not null, default: `now()`]

    indexes {
        (theme) [name: "talk_sessions_theme_index"]
    }
}

Table opinions {
    opinion_id uuid [primary key]
    talk_session_id uuid [not null, ref: > talk_sessions.talk_session_id]
    user_id uuid [not null, ref: > users.user_id]
    opinionContent varchar [not null]

    parent_opinion_id uuid [ref: > opinions.opinion_id]
    vote_id uuid [ref: > votes.vote_id]

    created_at timestamp [not null, default: `now()`]
}

Table votes {
    vote_id uuid [primary key]
    opinion_id uuid [not null, ref: > opinions.opinion_id]
    user_id uuid [not null, ref: > users.user_id]
    created_at timestamp [not null, default: `now()`]
}

